# dectation

./: .gitignore  .pre-commit-config.yaml  BreastCancerAI.spec  README.md  pyproject.toml  requirements.txt  requirements_enhanced.txt
backend/: backend_api.py  breast_cancer.db  build_model.py  complete_breast_cancer_classifier.py  config  evaluate_model.py  fix_model_accuracy.py  improve_accuracy.py  improved_training.py  malignant_focused_training.py  master_breast_cancer_classifier.py  run_isolated.py  run_project_fixed.py  run_project_simple.py  run_pytorch_project.py  simple_breast_cancer_classifier.py  simple_classifier.py  start_backend_server.py  start_project.py  test_model.py  test_model_prediction.py  test_thermal_model.py  tf_breast_cancer_classifier.py  thermal_classifier.py  thermal_training_history.json
backend/api/: app.py  database.py
backend/auth/: rbac.py
backend/evaluation/: current_confusion_matrix.py  evaluate_model.py  evaluate_model_comprehensive.py  generate_confusion_matrix.py  pytorch_confusion_matrix.py
backend/model_files/: predictor.py  thermal_predictor.py
backend/models/: __init__.py  audit.py  baseline_cnn.py  consent_log.py  inference.py  model_summary_pytorch_resnet50.txt  transfer_learning.py
backend/prediction/: predict_breast_cancer.py  predict_model.py  predict_single_image.py  predict_uploaded_image.py  prediction_api.py
backend/reports/: BC_User_20260219_121310.json
backend/routes/: result_routes.py
backend/scripts/: analyze_dataset.py  check_project_setup.py  check_status.py  check_windows_config.py  convert_dicom_to_png.py  create_test_image.py  download_cbisddsm.py  download_cbisddsm_actual.py  download_cbisddsm_manual.py  filter_busi_dataset.py  generate_medical_report.py  master_dataset_integration.py  medical_report_generator.py  organize_dataset.py  prepare_dataset.py  preprocess_images.py  process_busi_dataset.py  process_cbisddsm.py  process_sample_cbisddsm.py  process_thermal_dataset.py  setup_environment.py  split_dataset.py  verify_dataset.py  windows_training_guide.py
backend/src/data/: __init__.py  dataset.py  preprocessing.py
backend/src/train/: __init__.py  train.py
backend/training/: enhanced_training.py  enhanced_training_combined.py  quick_enhanced_training.py  retrain_model.py  train_breast_cancer_cnn.py  train_model.py  train_sample.py  train_thermal_model.py
backend/utils/: anonymization.py  async_jobs.py  consent_log.py  explainability.py  gradcam.py  metrics.py  report.py  validation.py  visualize.py
docs/: ACCURACY_IMPROVEMENT_GUIDE.md  BATCHNORM_GUIDE.md  CBIS-DDSM_DOWNLOAD_INSTRUCTIONS.md  COMPLETE_PROJECT_DOCUMENTATION.md  COMPLETE_PROJECT_GUIDE.md  COMPREHENSIVE_PROJECT_DOCUMENTATION.md  DATASET_INTEGRATION_GUIDE.md  DATASET_ORGANIZATION_GUIDE.md  DATASET_SPLITTING_GUIDE.md  DICOM_CONVERTER_README.md  EVALUATION_README.md  MALIGNANT_IMPROVEMENT_GUIDE.md  MASTER_SCRIPT_README.md  MODEL_BUILDER_GUIDE.md  PREDICTION_GUIDE.md  PREPROCESSING_GUIDE.md  PROJECT_SUMMARY.md  SETUP_README.md  STEP_BY_STEP_MODIFICATIONS.md  SYSTEM_STATUS.md  TRAINING_README.md  USAGE_GUIDE.md  WINDOWS_TROUBLESHOOTING_GUIDE.md  project_structure.md
frontend/: frontend.html
frontend/react-app/: package-lock.json  package.json
frontend/react-app/src/: App.css  App.jsx  index.css
frontend/react-app/src/components/: Footer.css  Footer.jsx  Navbar.css  Navbar.jsx
frontend/react-app/src/config/: api.js
frontend/react-app/src/pages/: About.css  About.jsx  Analysis.css  Analysis.jsx  Contact.css  Contact.jsx  History.css  History.jsx  Home.css  Home.jsx  Patients.css  Patients.jsx  ThermalAnalysis.jsx
frontend/templates/: result_page.html
scripts/: run_all.bat  run_project.bat  run_project.ps1  setup_environment.bat  setup_environment.ps1
